# rs-matter-embassy

./: Cargo.toml
.github/actions/setup-size-reports/: action.yaml
.github/workflows/: bloat-check.yaml  ci.yml  publish-dry-run.yml  publish.yml
examples/: README.md
examples/esp/: Cargo.toml
examples/esp/.cargo/: config.toml
examples/nrf/: Cargo.toml
examples/nrf/.cargo/: config.toml
examples/rp/: Cargo.toml  build.rs
examples/rp/.cargo/: config.toml
rs-matter-embassy/: Cargo.toml  README.md
rs-matter-embassy/src/: ble.rs  enet.rs  eth.rs  lib.rs  ot.rs  persist.rs  rand.rs  wifi.rs  wireless.rs
rs-matter-embassy/src/wifi/: esp.rs  rp.rs
rs-matter-embassy/src/wireless/: thread.rs  wifi.rs
rs-matter-embassy/src/wireless/thread/: esp_thread.rs  nrf.rs
rs-matter-embassy/src/wireless/wifi/: esp_wifi.rs  rp_wifi.rs
