[workspace]
resolver = "2"
members = [
    "rs-matter-embassy",
]

exclude = ["examples"]

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "08620f00fa54e1423c4d54d2da073fb819602d27" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "08620f00fa54e1423c4d54d2da073fb819602d27" }
nrf-802154 = { git = "https://github.com/sysgrok/nrf-802154" }
trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }

[profile.release]
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"
