[workspace]
resolver = "2"
members = [
    "rs-matter-embassy",
]

exclude = ["examples"]

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-802154 = { git = "https://github.com/sysgrok/nrf-802154", branch = "new-embassy-nrf" }
trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }

[profile.release]
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"
