[package]
name = "rs-matter-embassy"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "embassy"]
description = "Run rs-matter with embassy"
repository = "https://github.com/sysgrok/rs-matter-embassy"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[lib]
harness = false

[patch.'https://github.com/sysgrok/rs-matter-stack']
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack.git", branch = "next" }
#rs-matter-stack = { path = "../../rs-matter-stack" }
[patch.'https://github.com/esp-rs/openthread']
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "esp-rs-main" }
#openthread = { version = "0.1", path = "../../../esp-openthread/openthread" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
#rs-matter = { path = "../../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/sysgrok/edge-net" }
#edge-nal-embassy = { git = "https://github.com/sysgrok/edge-net" }
#edge-mdns = { git = "https://github.com/sysgrok/edge-net" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "61be6361062cbb4dee7239b5ae207270ba562298" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "61be6361062cbb4dee7239b5ae207270ba562298" }
#trouble-host = { version = "0.3", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.3", path = "../../../trouble/host" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
embassy-net = ["dep:embassy-net", "edge-nal-embassy", "openthread?/embassy-net-driver-channel", "esp-radio?/wifi"]
esp = ["esp-radio", "esp-hal", "openthread?/esp-radio"]
rp = ["cyw43", "cyw43-pio", "embassy-rp", "rand_core"]
nrf = ["embassy-nrf", "rand_core", "nrf-sdc", "nrf-mpsl", "portable-atomic", "openthread?/embassy-nrf"]
log = ["dep:log", "rs-matter-stack/log", "openthread?/log", "embassy-net?/log", "edge-nal-embassy?/log", "trouble-host/log", "cyw43?/log"]
defmt = ["dep:defmt", "rs-matter-stack/defmt", "openthread?/defmt", "embassy-net?/defmt", "edge-nal-embassy?/defmt", "trouble-host/defmt", "cyw43?/defmt", "cyw43-pio?/defmt"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
heapless = "0.8"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5"
embedded-io = "0.6"
scopeguard = { version = "1", default-features = false }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack", default-features = false, features = ["rustcrypto"] }
static_cell = "2"

embedded-storage-async = "0.4.1"
sequential-storage = "3"

embassy-net = { version = "0.7", optional = true }
edge-nal-embassy = { version = "0.6", optional = true, features = ["proto-ipv4", "proto-ipv6", "multicast", "dhcpv4", "medium-ethernet"] }

trouble-host = { version = "0.3", features = ["gatt"] }
bt-hci = "0.5"

openthread = { version = "0.1", git = "https://github.com/esp-rs/openthread", optional = true, features = ["udp", "srp", "edge-nal"] }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the `esp32*` chips family
esp-radio = { version = "0.15", optional = true, features = ["ble"], git = "https://github.com/esp-rs/esp-hal" }
esp-hal = { version = "=1.0.0-rc.0", optional = true, features = ["unstable"], git = "https://github.com/esp-rs/esp-hal" }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the RPi Pico W MCU
cyw43 = { version = "0.5", optional = true, features = ["firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.8", optional = true }
embassy-rp = { version = "0.8", optional = true, features = ["unstable-pac", "rp2040"] }
rand_core = { version = "0.9", optional = true }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for Nordic silicon
embassy-nrf = { version = "0.7", optional = true, features = ["time-driver-rtc1", "time", "nrf52840"], default-features = false }
nrf-sdc = { version = "0.4", default-features = false, optional = true, features = ["peripheral", "nrf52840"] }
nrf-mpsl = { version = "0.3", default-features = false, optional = true, features = ["nrf52840", "critical-section-impl"] }
portable-atomic = { version = "1", optional = true }
