[package]
name = "rs-matter-embassy"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "embassy"]
description = "Run rs-matter with embassy"
repository = "https://github.com/sysgrok/rs-matter-embassy"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[lib]
harness = false

[features]
default = ["rustcrypto"]

# Sizing

# Number of subscriptions
max-subscriptions-32 = ["rs-matter-stack/max-subscriptions-32"]
max-subscriptions-16 = ["rs-matter-stack/max-subscriptions-16"]
max-subscriptions-8 = ["rs-matter-stack/max-subscriptions-8"]
max-subscriptions-7 = ["rs-matter-stack/max-subscriptions-7"]
max-subscriptions-6 = ["rs-matter-stack/max-subscriptions-6"]
max-subscriptions-5 = ["rs-matter-stack/max-subscriptions-5"]
max-subscriptions-4 = ["rs-matter-stack/max-subscriptions-4"]
max-subscriptions-3 = ["rs-matter-stack/max-subscriptions-3"] # default
max-subscriptions-2 = ["rs-matter-stack/max-subscriptions-2"]
max-subscriptions-1 = ["rs-matter-stack/max-subscriptions-1"]

# Number of IM buffers
max-im-buffers-64 = ["rs-matter-stack/max-im-buffers-64"]
max-im-buffers-32 = ["rs-matter-stack/max-im-buffers-32"]
max-im-buffers-16 = ["rs-matter-stack/max-im-buffers-16"]
max-im-buffers-10 = ["rs-matter-stack/max-im-buffers-10"] # default
max-im-buffers-9 = ["rs-matter-stack/max-im-buffers-9"]
max-im-buffers-8 = ["rs-matter-stack/max-im-buffers-8"]
max-im-buffers-7 = ["rs-matter-stack/max-im-buffers-7"]
max-im-buffers-6 = ["rs-matter-stack/max-im-buffers-6"]
max-im-buffers-5 = ["rs-matter-stack/max-im-buffers-5"]
max-im-buffers-4 = ["rs-matter-stack/max-im-buffers-4"]

# Number of responders
max-responders-32 = ["rs-matter-stack/max-responders-32"]
max-responders-16 = ["rs-matter-stack/max-responders-16"]
max-responders-8 = ["rs-matter-stack/max-responders-8"]
max-responders-7 = ["rs-matter-stack/max-responders-7"]
max-responders-6 = ["rs-matter-stack/max-responders-6"]
max-responders-5 = ["rs-matter-stack/max-responders-5"]
max-responders-4 = ["rs-matter-stack/max-responders-4"] # default
max-responders-3 = ["rs-matter-stack/max-responders-3"]
max-responders-2 = ["rs-matter-stack/max-responders-2"]
max-responders-1 = ["rs-matter-stack/max-responders-1"]

# KV Blob store buffer size
kv-blob-store-65536 = ["rs-matter-stack/kv-blob-store-65536"]
kv-blob-store-32768 = ["rs-matter-stack/kv-blob-store-32768"]
kv-blob-store-16384 = ["rs-matter-stack/kv-blob-store-16384"]
kv-blob-store-8192 = ["rs-matter-stack/kv-blob-store-8192"]
kv-blob-store-4096 = ["rs-matter-stack/kv-blob-store-4096"] # default
kv-blob-store-2048 = ["rs-matter-stack/kv-blob-store-2048"]
kv-blob-store-1024 = ["rs-matter-stack/kv-blob-store-1024"]

# Number of fabrics
max-fabrics-32 = ["rs-matter-stack/max-fabrics-32"]
max-fabrics-16 = ["rs-matter-stack/max-fabrics-16"]
max-fabrics-8 = ["rs-matter-stack/max-fabrics-8"]
max-fabrics-7 = ["rs-matter-stack/max-fabrics-7"]
max-fabrics-6 = ["rs-matter-stack/max-fabrics-6"]
max-fabrics-5 = ["rs-matter-stack/max-fabrics-5"]
max-fabrics-4 = ["rs-matter-stack/max-fabrics-4"]
max-fabrics-3 = ["rs-matter-stack/max-fabrics-3"] # default
max-fabrics-2 = ["rs-matter-stack/max-fabrics-2"]
max-fabrics-1 = ["rs-matter-stack/max-fabrics-1"]

# Number of ACL entries per fabric
max-acls-per-fabric-32 = ["rs-matter-stack/max-acls-per-fabric-32"]
max-acls-per-fabric-16 = ["rs-matter-stack/max-acls-per-fabric-16"]
max-acls-per-fabric-8 = ["rs-matter-stack/max-acls-per-fabric-8"]
max-acls-per-fabric-7 = ["rs-matter-stack/max-acls-per-fabric-7"]
max-acls-per-fabric-6 = ["rs-matter-stack/max-acls-per-fabric-6"]
max-acls-per-fabric-5 = ["rs-matter-stack/max-acls-per-fabric-5"]
max-acls-per-fabric-4 = ["rs-matter-stack/max-acls-per-fabric-4"] # default
max-acls-per-fabric-3 = ["rs-matter-stack/max-acls-per-fabric-3"]
max-acls-per-fabric-2 = ["rs-matter-stack/max-acls-per-fabric-2"]
max-acls-per-fabric-1 = ["rs-matter-stack/max-acls-per-fabric-1"]

# Number of subjects per ACL entry
max-subjects-per-acl-32 = ["rs-matter-stack/max-subjects-per-acl-32"]
max-subjects-per-acl-16 = ["rs-matter-stack/max-subjects-per-acl-16"]
max-subjects-per-acl-8 = ["rs-matter-stack/max-subjects-per-acl-8"]
max-subjects-per-acl-7 = ["rs-matter-stack/max-subjects-per-acl-7"]
max-subjects-per-acl-6 = ["rs-matter-stack/max-subjects-per-acl-6"]
max-subjects-per-acl-5 = ["rs-matter-stack/max-subjects-per-acl-5"]
max-subjects-per-acl-4 = ["rs-matter-stack/max-subjects-per-acl-4"] # default
max-subjects-per-acl-3 = ["rs-matter-stack/max-subjects-per-acl-3"]
max-subjects-per-acl-2 = ["rs-matter-stack/max-subjects-per-acl-2"]
max-subjects-per-acl-1 = ["rs-matter-stack/max-subjects-per-acl-1"]

# Number of targets per ACL entry
max-targets-per-acl-32 = ["rs-matter-stack/max-targets-per-acl-32"]
max-targets-per-acl-16 = ["rs-matter-stack/max-targets-per-acl-16"]
max-targets-per-acl-8 = ["rs-matter-stack/max-targets-per-acl-8"]
max-targets-per-acl-7 = ["rs-matter-stack/max-targets-per-acl-7"]
max-targets-per-acl-6 = ["rs-matter-stack/max-targets-per-acl-6"]
max-targets-per-acl-5 = ["rs-matter-stack/max-targets-per-acl-5"]
max-targets-per-acl-4 = ["rs-matter-stack/max-targets-per-acl-4"]
max-targets-per-acl-3 = ["rs-matter-stack/max-targets-per-acl-3"] # default
max-targets-per-acl-2 = ["rs-matter-stack/max-targets-per-acl-2"]
max-targets-per-acl-1 = ["rs-matter-stack/max-targets-per-acl-1"]

# Number of sessions
max-sessions-64 = ["rs-matter-stack/max-sessions-64"]
max-sessions-32 = ["rs-matter-stack/max-sessions-32"]
max-sessions-16 = ["rs-matter-stack/max-sessions-16"] # default
max-sessions-8 = ["rs-matter-stack/max-sessions-8"]
max-sessions-7 = ["rs-matter-stack/max-sessions-7"]
max-sessions-6 = ["rs-matter-stack/max-sessions-6"]
max-sessions-5 = ["rs-matter-stack/max-sessions-5"]
max-sessions-4 = ["rs-matter-stack/max-sessions-4"]
max-sessions-3 = ["rs-matter-stack/max-sessions-3"]

# Number of exchanges per session
max-exchanges-per-session-16 = ["rs-matter-stack/max-exchanges-per-session-16"]
max-exchanges-per-session-8 = ["rs-matter-stack/max-exchanges-per-session-8"]
max-exchanges-per-session-7 = ["rs-matter-stack/max-exchanges-per-session-7"]
max-exchanges-per-session-6 = ["rs-matter-stack/max-exchanges-per-session-6"]
max-exchanges-per-session-5 = ["rs-matter-stack/max-exchanges-per-session-5"] # default
max-exchanges-per-session-4 = ["rs-matter-stack/max-exchanges-per-session-4"]
max-exchanges-per-session-3 = ["rs-matter-stack/max-exchanges-per-session-3"]

# General
embassy-net = ["dep:embassy-net", "edge-nal-embassy", "openthread?/embassy-net-driver-channel", "esp-radio?/wifi"]
esp = ["esp-radio", "esp-hal", "openthread?/esp-radio"]
rp = ["cyw43", "cyw43-pio", "embassy-rp", "embassy-net-driver-channel"]
nrf = ["embassy-nrf", "nrf-sdc", "nrf-mpsl", "portable-atomic", "openthread?/embassy-nrf"]
log = ["dep:log", "rs-matter-stack/log", "openthread?/log", "embassy-net?/log", "edge-nal-embassy?/log", "trouble-host/log", "cyw43?/log"]
defmt = ["dep:defmt", "rs-matter-stack/defmt", "openthread?/defmt", "embassy-net?/defmt", "edge-nal-embassy?/defmt", "trouble-host/defmt", "cyw43?/defmt", "cyw43-pio?/defmt"]
rustcrypto = ["rs-matter-stack/rustcrypto"]
mbedtls = ["rs-matter-stack/mbedtls"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
heapless = "0.8"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5"
embedded-io = "0.6"
scopeguard = { version = "1", default-features = false }
rs-matter-stack = { version = "0.1", default-features = false }
static_cell = "2"
rand = { version = "0.8", default-features = false }

embedded-storage-async = "0.4.1"
sequential-storage = "3"

embassy-net = { version = "0.7", optional = true }
edge-nal-embassy = { version = "0.7", optional = true, features = ["proto-ipv4", "proto-ipv6", "multicast", "dhcpv4", "medium-ethernet"] }

trouble-host = { version = "0.5", features = ["gatt"] }
bt-hci = "0.6"

openthread = { version = "0.1", optional = true, features = ["udp", "srp", "edge-nal"] }

rand_core = "0.9"

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the `esp32*` chips family
esp-radio = { version = "0.17", optional = true, features = ["ble"] }
esp-hal = { version = "1", optional = true, features = ["unstable"] }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the RPi Pico W MCU
cyw43 = { version = "0.6", optional = true, features = ["firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.9", optional = true }
embassy-rp = { version = "0.9", optional = true, features = ["unstable-pac", "rp2040"] }
embassy-net-driver-channel = { version = "0.3", optional = true }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for Nordic silicon
embassy-nrf = { version = "0.8", optional = true, features = ["time-driver-rtc1", "time", "nrf52840"], default-features = false }
nrf-sdc = { version = "0.4", default-features = false, optional = true, features = ["peripheral", "nrf52840"] }
nrf-mpsl = { version = "0.3", default-features = false, optional = true, features = ["nrf52840", "critical-section-impl"] }
portable-atomic = { version = "1", optional = true }
