[package]
name = "rs-matter-embassy-esp-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light_wifi"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth2"
required-features = ["thread"]
harness = false

[[bin]]
name = "light_thread"
required-features = ["thread"]
harness = false

[[bin]]
name = "light_thread_coex"
required-features = ["thread"]
harness = false

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
#rs-matter = { path = "../../../rs-matter/rs-matter" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack.git", branch = "next" }
#rs-matter-stack = { path = "../../../rs-matter-stack" }
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "next" }
#openthread = { version = "0.1", path = "../../../openthread/openthread" }
#edge-nal = { git = "https://github.com/sysgrok/edge-net" }
#edge-nal-embassy = { git = "https://github.com/sysgrok/edge-net" }
#edge-mdns = { git = "https://github.com/sysgrok/edge-net" }
#trouble-host = { version = "0.4", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.4", path = "../../../trouble/host" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal" }
esp-println = { git = "https://github.com/esp-rs/esp-hal" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
opt-level = "s"
overflow-checks = false

[features]
default = ["esp32c6"]
esp32 = ["esp-rtos/esp32", "esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "esp-radio/esp32", "esp-bootloader-esp-idf/esp32", "esp-metadata-generated/esp32", "portable-atomic/critical-section", "wifi"]
esp32c2 = ["esp-rtos/esp32c2", "esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2", "esp-radio/esp32c2", "esp-bootloader-esp-idf/esp32c2", "esp-metadata-generated/esp32c2", "portable-atomic/critical-section", "wifi"]
esp32c3 = ["esp-rtos/esp32c3", "esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-radio/esp32c3", "esp-bootloader-esp-idf/esp32c3", "esp-metadata-generated/esp32c3", "portable-atomic/unsafe-assume-single-core", "wifi"]
esp32c6 = ["esp-rtos/esp32c6", "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-radio/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-metadata-generated/esp32c6", "portable-atomic/critical-section"]
esp32s3 = ["esp-rtos/esp32s3", "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-radio/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-metadata-generated/esp32s3", "portable-atomic/critical-section", "wifi"]
esp32h2 = ["esp-rtos/esp32h2", "esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-radio/esp32h2", "esp-bootloader-esp-idf/esp32h2", "esp-metadata-generated/esp32h2", "portable-atomic/critical-section", "thread"]
wifi = ["rs-matter-embassy/embassy-net"]
thread = ["rs-matter-embassy/openthread"]

[dependencies]
log = "0.4"
embassy-executor = "0.9"
esp-backtrace = { version = "0.18", features = ["panic-handler", "println"] }
esp-hal = { version = "=1.0.0-rc.1", features = ["log-04", "unstable", "exception-handler"] }
esp-rtos = { version = "0.1.0", features = ["esp-radio", "embassy"] }
esp-alloc = { version = "0.9" }
esp-println = { version = "0.16", features = ["log-04"] }
esp-radio = { version = "0.16", features = ["ble", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.3", features = ["log-04"] }
esp-metadata-generated = "0.2"
rs-matter-embassy = { path = "../../rs-matter-embassy", features = ["esp", "log"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }
embassy-futures = "0.1"
embassy-time = "0.5"
static_cell = "2"
portable-atomic = "1"
