[package]
name = "rs-matter-embassy-esp-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light_wifi"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_wifi_persistent"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth2"
required-features = ["thread"]
harness = false

[[bin]]
name = "light_thread"
required-features = ["thread"]
harness = false

[[bin]]
name = "light_thread_coex"
required-features = ["thread"]
harness = false

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
opt-level = "s"
overflow-checks = false

[patch.crates-io]
mbedtls-rs-sys = { git = "https://github.com/esp-rs/mbedtls-rs" }
#openthread = { git = "https://github.com/esp-rs/openthread" }
#openthread-sys = { git = "https://github.com/esp-rs/openthread" }
openthread = { git = "https://github.com/sysgrok/openthread", branch = "new-radios" }
openthread-sys = { git = "https://github.com/sysgrok/openthread", branch = "new-radios" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal" }
esp-println = { git = "https://github.com/esp-rs/esp-hal" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal" }

#esp-hal = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-rtos = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-alloc = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-backtrace = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-println = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-radio = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-storage = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-bootloader-esp-idf = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-metadata-generated = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-sync = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-phy = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
#esp-radio-rtos-driver = { git = "https://github.com/yvf/esp-hal", branch = "fix/h2-ieee802154-receive-path" }
trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }

nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-802154 = { git = "https://github.com/sysgrok/nrf-802154", branch = "new-embassy-nrf" }

[features]
default = ["esp32c6"]
esp32 = ["esp-rtos/esp32", "esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "esp-radio/esp32", "esp-storage/esp32", "esp-bootloader-esp-idf/esp32", "esp-metadata-generated/esp32", "portable-atomic/critical-section", "wifi"]
esp32c2 = ["esp-rtos/esp32c2", "esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2", "esp-radio/esp32c2", "esp-storage/esp32c2", "esp-bootloader-esp-idf/esp32c2", "esp-metadata-generated/esp32c2", "portable-atomic/critical-section", "wifi"]
esp32c3 = ["esp-rtos/esp32c3", "esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-radio/esp32c3", "esp-storage/esp32c3", "esp-bootloader-esp-idf/esp32c3", "esp-metadata-generated/esp32c3", "portable-atomic/unsafe-assume-single-core", "wifi"]
esp32c6 = ["esp-rtos/esp32c6", "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-radio/esp32c6", "esp-storage/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-metadata-generated/esp32c6", "portable-atomic/critical-section"]
esp32s3 = ["esp-rtos/esp32s3", "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-radio/esp32s3", "esp-storage/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-metadata-generated/esp32s3", "portable-atomic/critical-section", "wifi"]
esp32h2 = ["esp-rtos/esp32h2", "esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-radio/esp32h2", "esp-storage/esp32h2", "esp-bootloader-esp-idf/esp32h2", "esp-metadata-generated/esp32h2", "portable-atomic/critical-section", "thread"]
wifi = ["rs-matter-embassy/embassy-net"]
thread = ["rs-matter-embassy/openthread", "rs-matter-embassy/openthread-heap-int-8192"]

[dependencies]
log = "0.4"
embassy-executor = "0.10"
embassy-embedded-hal = "0.6"
esp-backtrace = { version = "0.19", features = ["panic-handler", "println"] }
esp-hal = { version = "~1.1", features = ["log-04", "unstable", "exception-handler"] }
esp-rtos = { version = "0.3", features = ["esp-radio", "embassy"] }
esp-alloc = { version = "0.10" }
esp-println = { version = "0.17", features = ["log-04"] }
esp-radio = { version = "1.0.0-beta.0", features = ["ble", "log-04", "unstable"] }
esp-storage = "0.9"
esp-bootloader-esp-idf = { version = "0.5", features = ["log-04"] }
esp-metadata-generated = "0.4"
rs-matter-embassy = { path = "../../rs-matter-embassy", version = "0.1", features = ["esp", "log", "mbedtls"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["memchr", "utoa", "strtoul"] }
embassy-futures = "0.1"
embassy-time = "0.5"
embassy-sync = "0.8"
static_cell = "2"
portable-atomic = "1"
