[package]
name = "rs-matter-embassy-nrf-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "light_thread"
harness = false

[[bin]]
name = "light_thread_coex"
harness = false

[[bin]]
name = "light_eth"
harness = false

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
debug = 2
debug-assertions = false
lto = "fat"
codegen-units = 1
incremental = false
overflow-checks = false

[patch.crates-io]
#openthread = { git = "https://github.com/esp-rs/openthread" }
#openthread-sys = { git = "https://github.com/esp-rs/openthread" }
openthread = { git = "https://github.com/sysgrok/openthread", branch = "new-radios" }
openthread-sys = { git = "https://github.com/sysgrok/openthread", branch = "new-radios" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-802154 = { git = "https://github.com/sysgrok/nrf-802154", branch = "new-embassy-nrf" }
mbedtls-rs-sys = { git = "https://github.com/esp-rs/mbedtls-rs" }

trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }

[dependencies]
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime-ms"] }
embassy-nrf = { version = "0.11", features = ["defmt", "time-driver-rtc1", "time", "nrf52840"], default-features = false }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.8", features = ["defmt"] }
defmt = "1"
embedded-alloc = "0.7"
rs-matter-embassy = { path = "../../rs-matter-embassy", version = "0.1", features = ["nrf", "openthread", "defmt", "mbedtls", "openthread-heap-int-8192"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["alloc", "strstr", "strcmp", "strncmp", "isupper", "memchr", "utoa", "strtoul"] }

cortex-m = "0.7.6"
cortex-m-rt = "0.7"

rtt-target = { version = "0.6", features = ["defmt"] }
panic-rtt-target = "0.2"

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
