[package]
name = "rs-matter-embassy-rp-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "light_wifi"
harness = false

[[bin]]
name = "light_eth"
harness = false

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
debug = 2
debug-assertions = false
lto = "fat"
codegen-units = 1
incremental = false
overflow-checks = false

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-net = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy" }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy" }

trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }

nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-802154 = { git = "https://github.com/sysgrok/nrf-802154", branch = "new-embassy-nrf" }

[features]
skip-cyw43-firmware = []

[dependencies]
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime-ms"] }
embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.8", features = ["defmt"] }
defmt = "1"
embedded-alloc = "0.7"
rs-matter-embassy = { path = "../../rs-matter-embassy", features = ["embassy-net", "rp", "defmt"] }

# Wireless examples
bt-hci = { version = "0.9", default-features = false, features = ["defmt"] }
cyw43 = { version = "0.7", features = ["firmware-logs", "defmt", "bluetooth"] }
cyw43-pio = "0.10"

# W5500 Ethernet examples
embassy-net-wiznet = { version = "0.3", features = ["defmt"] }
embedded-hal-bus = { version = "0.1", features = ["async"] }
rand_core = "0.9"

cortex-m = "0.7.6"
cortex-m-rt = "0.7"

rtt-target = { version = "0.6", features = ["defmt"] }
panic-rtt-target = "0.2"

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"]}
